--- a/py2tf1.2/Dockerfile
+++ b/py2tf1.2/Dockerfile
@@ -23,7 +23,7 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
     && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
-    wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh \
+    wget https://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh \
             -O /tmp/miniconda.sh \
             && \
     /bin/bash /tmp/miniconda.sh -b -p /miniconda && \
@@ -31,8 +31,8 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
     conda config --set always_yes yes --set changeps1 no && \
     conda update --yes -q conda && \
     conda info -a && \
-    conda install --yes -q python=3.6 && \
-    python -m pip install --upgrade numpy six coverage mock pytest sphinx matplotlib ipython[all] "coveralls>=1.1" && \
-    python -m pip install tensorflow==1.4.1
+    conda install --yes -q python=2.7 && \
+    python -m pip install --upgrade numpy six coverage mock pytest sphinx matplotlib pillow ipython[all] "coveralls>=1.1" && \
+    python -m pip install tensorflow==1.2.1
 
 CMD ["/bin/bash"]
