--- a/py2tf1.2/Dockerfile
+++ b/py2tf1.2/Dockerfile
@@ -32,7 +32,9 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
     conda update --yes -q conda && \
     conda info -a && \
     conda install --yes -q python=2.7 && \
-    python -m pip install --upgrade numpy six coverage mock pytest sphinx matplotlib pillow ipython[all] "coveralls>=1.1" && \
+    python -m pip install --upgrade pip && \
+    python -m pip install --upgrade numpy six coverage mock pytest sphinx matplotlib pillow "coveralls>=1.1" && \
+    python -m pip install "ipython[all]<6" && \
     python -m pip install tensorflow==1.2.1
 
 CMD ["/bin/bash"]
