--- a/py3tf1.4/Dockerfile
+++ b/py3tf1.4/Dockerfile
@@ -32,7 +32,9 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
     conda update --yes -q conda && \
     conda info -a && \
     conda install --yes -q python=3.6 && \
-    python -m pip install --upgrade numpy six coverage mock pytest sphinx matplotlib pillow ipython[all] "coveralls>=1.1" && \
+    python -m pip install --upgrade pip && \
+    python -m pip install --upgrade numpy six coverage mock pytest sphinx matplotlib pillow "coveralls>=1.1" && \
+    python -m pip install --upgrade "ipython[all]" && \
     python -m pip install tensorflow==1.4.1
 
 CMD ["/bin/bash"]
