--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -32,6 +32,7 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
     conda update --yes -q conda && \
     conda info -a && \
     conda install --yes -q python={{ python_version }} && \
+    python -m pip install --ignore-installed --upgrade setuptools && \
     python -m pip install --upgrade pip && \
     python -m pip install --upgrade numpy six coverage mock pytest sphinx matplotlib pillow "coveralls>=1.1" && \
     python -m pip install {% if python_version[0] == '2' %}"ipython[all]<6"{% else %}--upgrade "ipython[all]"{% endif %} && \
