--- a/py2tf1.2/Dockerfile
+++ b/py2tf1.2/Dockerfile
@@ -32,6 +32,7 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
     conda update --yes -q conda && \
     conda info -a && \
     conda install --yes -q python=2.7 && \
+    python -m pip install --ignore-installed --upgrade setuptools && \
     python -m pip install --upgrade pip && \
     python -m pip install --upgrade numpy six coverage mock pytest sphinx matplotlib pillow "coveralls>=1.1" && \
     python -m pip install "ipython[all]<6" && \
