--- a/py2tf1.5/Dockerfile
+++ b/py2tf1.5/Dockerfile
@@ -36,6 +36,6 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
     python -m pip install --upgrade pip && \
     python -m pip install --upgrade numpy six coverage mock pytest sphinx matplotlib pillow "coveralls>=1.1" && \
     python -m pip install "ipython[all]<6" && \
-    python -m pip install tensorflow==1.5.0rc0
+    python -m pip install tensorflow==1.5.0
 
 CMD ["/bin/bash"]
