--- a/py3tf1.2/Dockerfile
+++ b/py3tf1.2/Dockerfile
@@ -32,8 +32,8 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
     conda update --yes -q conda && \
     conda info -a && \
     conda install --yes -q python=3.6 && \
-    python -m pip install --ignore-installed --upgrade pip setuptools && \
-    python -m pip install --ignore-installed --upgrade numpy coverage mock pytest sphinx matplotlib pillow "coveralls>=1.1" && \
+    python -m pip install --upgrade pip setuptools && \
+    python -m pip install numpy coverage mock pytest sphinx matplotlib pillow "coveralls>=1.1" && \
     python -m pip install --upgrade "ipython[all]" && \
     python -m pip install tensorflow==1.2.1
 
