--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -5,7 +5,7 @@ MAINTAINER Haowen Xu <public@korepwx.com>
 ARG UBUNTU_MIRROR=archive.ubuntu.com
 ENV LANG=en_US.UTF-8
 ENV LC_ALL=en_US.UTF-8
-ENV PATH="/miniconda/bin:${PATH}"
+ENV PATH="${PATH}"
 ENV SHELL=/bin/bash
 {% if gpu %}ENV LD_LIBRARY_PATH="/usr/local/nvidia/lib64:/usr/local/nvidia/lib:/usr/local/cuda/lib64:/usr/local/cuda/lib:${LD_LIBRARY_PATH}"{% endif %}
 
@@ -20,20 +20,15 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
         git \
         locales \
         language-pack-en \
-    && \
+        {% if python_version[0] == '2' %}python python-dev python-pip{% else %}python3 python3-dev python3-pip{% endif %} \
+    && \{% if python_version[0] == '2' %}
+    ln -sf /usr/bin/python3 /usr/bin/python && \
+    ln -sf /usr/bin/pip3 /usr/bin/pip
+    {% endif %}
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
-    wget https://repo.continuum.io/miniconda/Miniconda{% if python_version[0] == '3' %}3{% endif %}-latest-Linux-x86_64.sh \
-            -O /tmp/miniconda.sh \
-            && \
-    /bin/bash /tmp/miniconda.sh -b -p /miniconda && \
-    rm /tmp/miniconda.sh && \
-    conda config --set always_yes yes --set changeps1 no && \
-    conda update --yes -q conda && \
-    conda info -a && \
-    conda install --yes -q python={{ python_version }} && \
     python -m pip install --upgrade pip setuptools && \
-    python -m pip install numpy coverage mock pytest sphinx matplotlib pillow "coveralls>=1.1" && \
+    python -m pip install --upgrade numpy coverage mock pytest sphinx matplotlib pillow "coveralls>=1.1" && \
     python -m pip install {% if python_version[0] == '2' %}"ipython[all]<6"{% else %}--upgrade "ipython[all]"{% endif %} && \
     python -m pip install tensorflow=={{ tensorflow_version }}
 
