--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -21,10 +21,9 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
         locales \
         language-pack-en \
         {% if python_version[0] == '2' %}python python-dev python-pip{% else %}python3 python3-dev python3-pip{% endif %} \
-    && \{% if python_version[0] == '2' %}
+    && \{% if python_version[0] == '3' %}
     ln -sf /usr/bin/python3 /usr/bin/python && \
-    ln -sf /usr/bin/pip3 /usr/bin/pip
-    {% endif %}
+    ln -sf /usr/bin/pip3 /usr/bin/pip && \{% endif %}
     apt-get clean && \
     rm -rf /var/lib/apt/lists/* && \
     python -m pip install --upgrade pip setuptools && \
