comment out the build steps for old TensorFlow versions

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,18 +4,18 @@ services:
 - docker
 env:
   matrix:
-  - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.2.1
-  - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.2.1
-  - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.3.0
-  - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.3.0
-  - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.4.1
-  - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.4.1
-  - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.5.0
-  - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.5.0
-  - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.6.0
-  - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.6.0
-  - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.7.1
-  - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.7.1
+  # - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.2.1
+  # - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.2.1
+  # - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.3.0
+  # - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.3.0
+  # - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.4.1
+  # - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.4.1
+  # - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.5.0
+  # - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.5.0
+  # - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.6.0
+  # - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.6.0
+  # - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.7.1
+  # - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.7.1
   - PYTHON_VERSION=2.7 TENSORFLOW_VERSION=1.8.0
   - PYTHON_VERSION=3.5 TENSORFLOW_VERSION=1.8.0
   global:
