--- a/py2tf1.12/Dockerfile
+++ b/py2tf1.12/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 
 MAINTAINER Haowen Xu <haowen.xu@outlook.com>
 
@@ -27,6 +27,6 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
     python -m pip install --upgrade pip setuptools && \
     python -m pip install --upgrade numpy coverage mock pytest sphinx matplotlib pillow "coveralls>=1.1" && \
     python -m pip install "ipython[all]<6" && \
-    python -m pip install tensorflow==1.4.1
+    python -m pip install tensorflow==1.12.0rc2
 
 CMD ["/bin/bash"]
