--- a/py2tf1.13/Dockerfile
+++ b/py2tf1.13/Dockerfile
@@ -27,6 +27,6 @@ RUN sed -i "s/archive.ubuntu.com/${UBUNTU_MIRROR}/g" /etc/apt/sources.list && \
     python -m pip install --upgrade pip setuptools && \
     python -m pip install --upgrade numpy coverage mock pytest sphinx matplotlib pillow "coveralls>=1.1" && \
     python -m pip install "ipython[all]<6" && \
-    python -m pip install tensorflow==1.12.0
+    python -m pip install tensorflow==1.13.0rc0
 
 CMD ["/bin/bash"]
